# httf2018-qual

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.cpp
generated_n10/: 1099.txt  1302.txt  1317.txt  1370.txt  1408.txt  1461.txt  1570.txt  1660.txt  1747.txt  1912.txt  1946.txt  1965.txt  2093.txt  2180.txt  2233.txt  2398.txt  2432.txt  2451.txt  2526.txt  255.txt  2613.txt  2666.txt  2703.txt  2719.txt  274.txt  2756.txt  2937.txt  3008.txt  3061.txt  3114.txt  3167.txt  3491.txt  3690.txt  3743.txt  3762.txt  383.txt  3943.txt  4089.txt  4142.txt  4195.txt  (+61 more)
python/: main.py
